--- a/style.css
+++ b/style.css
@@ -1,8 +1,47 @@
-*{
-margin: 0;
-padding: 0;    
+* {
+  margin: 0;
+  padding: 0;
 }
 
-body{
-    background-color: rgb(185, 116, 27);
+body {
+}
+
+/*    styles for intro div     */
+
+
+.intro {
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,121,111,1) 35%, rgba(0,212,255,1) 100%);
+  color: white;
+  text-align: center;
+  height: 100vh;
+  padding-top: 12%;
+}
+
+#pf-img{
+    height: 45%;
+}
+
+.intro h1, a{
+    margin: 20px;
+}
+
+.intro h2{
+    font-style: italic;
+    margin: 20px;
+}
+
+
+/*      styling the container tag    */
+
+
+.container{
+    margin: 2rem;
+}
+
+
+
+.container h2{
+    margin: 0.6rem;
+    text-align: center;
 }
